--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <h3 style="color: brown;">Basic drinks:</h3>
         <p id="kk">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quo modi a, animi accusantium similique neque eos molestiae at unde officiis. Iste, voluptatibus cum! Voluptatum ipsum cumque ipsa repellat esse.</p>
     </div>
-    <p>Please chack let <a href="ok.html" target="_blank"><strong>more</strong></a></p>
+    <p style="background-color: antiquewhite; width: 200px; font-size: larger;">Please chack let <a href="ok.html" target="_blank"><strong>more</strong></a></p>
 </body>
 </html>
